# CloudGateway

./: .gitignore  README.md  asset-manifest.json  example.dns_records.txt  firestore.indexes.json  index.html  pyrightconfig.json  terraform-deploy.sh  terraform.sh  test.sh
API/: .gitignore  README.md  pyproject.toml
API/cloudlaunch_api/: app.py  auth.py  enums.py  errors.py  firebase.py  logs.py  models.py  repository.py  routes.py  settings.py  sync.py  wireguard.py
API/scripts/: send_test_email.py
API/src/: __init__.py  app.py  auth.py  enums.py  errors.py  firebase.py  logs.py  models.py  notifications.py  register.py  repository.py  routes.py  settings.py  sync.py  wireguard.py
API/tests/: __init__.py  conftest.py  fakes.py  test_errors.py  test_health.py  test_logs.py  test_models.py  test_notifications.py  test_register.py  test_repository.py  test_routes_admin.py  test_routes_auth.py  test_routes_clients.py  test_routes_users.py  test_sync.py  test_wireguard.py
APP/: README.md  package.json  tsconfig.json
CloudFlare/: README.md  example.cloud-launch-gateway.pem  example.gocloudlaunch.com.txt
Firebase/: README.md  firestore.rules  indexes.md  schema.ts
OCI/: README.md  adguard-home.md
TODO/: Deployment_Runbook_Checklist.md  Google_Sign_In_Firebase_Setup.md  README.md  Shared_VPN_Contract.md  Shared_VPN_Implementation_Commits.md  Shared_VPN_Plan.md  apple-app-polish.md  apple-mvp-0-implementation.md  apple-mvp-1-firebase-auth.md  apple-mvp-2-implementation.md  apple-mvp-3-implementation.md  apple-mvp-3-providers.md  apple-mvp-3-ui.md  apple-mvp.md  (+2 more)
(+210 files in other folders)
